# Merry

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FirstProgram.c  LICENSE  MYLOG.md  Makefile  Properties  README.md  STYLE_GUIDE.md  a.mbin  abc0  abc1  all_insts.md  arithmetic.S  build.py  build.sh  childmain.c  compile.txt  compilewindows.txt  conttest.asm  conttest.mbin  fact.mbin  filetest.asm  filetest.mbin  impl.md  log.md  logs.md  main  main.c  main.cpp  mdump0  memtest.mbin  merry.c  merry_core.c  merry_dmemory.c  merry_errno.c  merry_memory.c  merry_nreader.c  (+19 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: custom.md
Assembler/: main.cpp
Assembler/codegen/: codegen.hpp  emit.hpp
MLang/: TODO  a.out  main.cpp
asm/: Makefile  main.cpp  test.txt
core/: merry_core.h
dbg/: main.zig
defs/: merry_request.h
dev/: merry_nreader.h
docs/: allocators.txt  decoder.txt  dynamiclibs.txt  fileformat.txt  input_file_format.txt  instructions.txt  opcodes.txt
example/: dyncall.mbin  fileIO.mbin  iseven.mbin
info/: comms_conv.md  input_file_format.md  instructions.txt
legacy/: childmain.c  codegen.cpp  codegen.hpp  defs.hpp  emit.cpp  emit.hpp  error.hpp  expr.hpp  lexer.cpp  merry_dbg.c  merry_dbg.h  merry_debugger_connector.c  merry_debugger_connector.h  merry_fio.c  merry_fio.h  merry_include.h  merry_inst.h  merry_memory_allocator.c  merry_reader.c  merry_reader.h  merry_thread_pool.c  merry_time.h  preprocessor.cpp  preprocessor.hpp  preprocessor_syms.cpp  preprocessor_syms.hpp  strutils.cpp  strutils.h  symtable.hpp  worker.hpp
lib/: details.txt  stdcont.asm  stddefs.asm  stddefs.masm  stddyn.asm  stdfio.asm  stdinit.asm  stdinit.masm  stdmem.asm  stdmem.masm  stdmp.asm  stdmt.asm  stdsync.asm  stdutils.asm  stdutils.masm
masm/: Makefile
merry/: CMakeLists.txt  inpFile.mbin  merry  merry.c  merryLog.txt  merry_64_bit_core.c  merry_assembly.S  merry_consts.c  merry_core.c  merry_core_base.c  merry_core_base_mem_access.c  merry_dbg.c  merry_debug.c  merry_debugger_connector.c  merry_dmemory.c  merry_dynamic_libs.c  merry_dynamic_list.c  merry_dynl.c  merry_errno.c  merry_exec.c  merry_files.c  merry_graves.c  merry_graves_files.c  merry_graves_input.c  merry_graves_request_queue.c  merry_helpers.c  merry_ihdlr.c  merry_list.c  merry_logger.c  merry_memory.c  merry_nreader.c  merry_os.c  merry_os_exec.c  merry_owc.c  merry_page_allocator.c  merry_platform.c  merry_protectors.c  merry_queue.c  merry_queue_simple.c  merry_ram.c  (+14 more)
merry/abs/: CMakeLists.txt  arithmetic.S  merry_dynamic_libs.h  merry_dynl.c  merry_files.h  merry_fio.c  merry_memory.h  merry_owc.h  merry_pipe.c  merry_process.c  merry_process.h  merry_protectors.h  merry_thread.c  merry_threads.h  merry_time.c  merry_traps.c  merry_twc.h
merry/abs/hard/linux/: merry_imp.h
merry/abs/linux/: merry_mem.h  merry_pipe.h  merry_process.h  merry_thread.h  merry_traps.h
merry/abs/soft/linux/: merry_dynl.h  merry_fio.h  merry_process.h  merry_thread.h  merry_time.h
merry/abs/soft/win/: merry_dynl.h  merry_fio.h  merry_process.h  merry_sockets.h  merry_thread.h
merry/abs/win/: merry_pipe.h  merry_process.h  merry_traps.h
merry/core/: merry_core.h  merry_exec.h  merry_opcodes.h
merry/cores/: merry_core_base.h  merry_core_base_mem_access.h  merry_core_types.h
merry/cores/core64/: merry_64_bit_core.h  merry_64_bit_core_isa.h
merry/defs/: merry_commands.h  merry_errors.h  merry_internals.h  merry_request.h
merry/dev/: merry_dbg.h  merry_debug.h  merry_debugger_connector.h  merry_dmemory.h  merry_memory.h  merry_nreader.h  merry_request_hdlr.h  merry_request_queue.h
merry/dev/subsystem/: merry_subcomms.h  merry_task_queue.h
merry/graves/: merry_graves.h  merry_graves_constants.h  merry_graves_input.h  merry_graves_request_queue.h  merry_shared_ram.h
merry/graves/organ/: merry_graves_files.h
merry/includes/: merry_errors.h
merry/internals/: merry.h  merry_Tinc.h  merry_core.h  merry_dmemory.h  merry_exec.h  merry_fpu.h  merry_include.h  merry_inst.h  merry_internals.h  merry_memory.h  merry_nreader.h  merry_opcodes.h  merry_os.h  merry_os_exec.h  merry_page_allocator.h  merry_reader.h  merry_request.h  merry_request_hdlr.h  merry_request_queue.h  merry_state.h  merry_state_handlers.h  merry_thread_pool.h
merry/internals/decoder/: merry_decode.h  merry_exec.h  merry_inst.h  merry_inst_queue.h  merry_opcodes.h
merry/internals/decoder/inst/: merry_exec.h  merry_inst.h  merry_inst_queue.h  merry_tinc.h
merry/internals/decoder/src/: merry_decode.c  merry_exec.c  merry_inst_queue.c
merry/internals/imp/: arithmetic.S  ext.S  extra.S  merry_arithmetic.h  merry_extra.h  merry_imp.h
merry/internals/services/: merry_input.h  merry_output.h
merry/internals/services/src/: merry_input.c  merry_output.c
merry/lib/include/: merry_cbuffer.h  merry_memory_allocator.h  merry_queue.h  merry_squeue.h
merry/lib/src/: merry_cbuffer.c  merry_memory_allocator.c
merry/memory/: merry_ram.h
merry/os/: merry_ihdlr.h  merry_os.h  merry_os_exec.h  merry_syscall_hdlr.h
merry/tools/: merry.h  merry_console.h  merry_dynl.h  merry_errno.h  merry_queue.h  merry_stack.h  merry_subsystem.h  merry_temp.h
merrylang/: Cargo.toml  merry.me
merrylib/: printf.zasm
os/: merry_os.h
stdtest/: filetest.asm  stdalloctest.masm  stdinittest.masm  stdinittest.mb  stdinittest.mdat
subsystest/: subsys.c
sys/: merry_dynl.h  merry_errno.h  merry_fio.h  merry_mem.h  merry_thread.h  merry_thread_posix.h  merry_thread_win32.h
tests/: a.out  abc0  endiantest.c  factorial.gpc.masm  hashtest.c  listtest  main.merry  memspeedtest.c  newreader.c  queuetest  stacktest  tempAllocTest  temporaryAllocatorTest  temporaryAllocatorTest.c  test  test.c  test.txt  test1.gpc.masm  test2.gpc.masm  testfile.mbin  write.c
tools/: merry.h  merry_console.h  merry_errno.h
utils/: merry_config.h  merry_consts.h  merry_dynamic_list.h  merry_helpers.h  merry_imp.h  merry_list.h  merry_logger.h  merry_queue.h  merry_queue_simple.h  merry_stack.h  merry_types.h  merry_utils.h  windows.h
(+403 files in other folders)
